Bricks be Falling